test/invalid/enum_name.d
//T error: enum_name.d:6:3:
//T error: `Bits` is not a valid suffix.
// sdfmt off

enum Enum {
	32Bits = 0,
}
